--- a/app/src/main/res/layout/dialog_show_movie.xml
+++ b/app/src/main/res/layout/dialog_show_movie.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:background="@color/main_out_color"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="32dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,7 +46,41 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView_description"
-                    app:layout_constraintVertical_bias="0.503" />
+                    app:layout_constraintVertical_bias="0.912" />
+
+                <Button
+                    android:id="@+id/button_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="80dp"
+                    android:hint="@string/button_delete"
+                    android:textAlignment="gravity"
+                    android:textColorHint="#CE0FEF"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.313"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
+                    app:layout_constraintVertical_bias="0.568" />
+
+                <Button
+                    android:id="@+id/button_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="80dp"
+                    android:hint="@string/button_edit"
+                    android:textAlignment="gravity"
+                    android:textColorHint="#CE0FEF"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.781"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
+                    app:layout_constraintVertical_bias="0.568" />
 
                 <TextView
                     android:id="@+id/textView_year"
@@ -57,25 +91,16 @@
                     app:layout_constraintStart_toStartOf="@+id/textView_title"
                     app:layout_constraintTop_toBottomOf="@+id/textView_title" />
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="91dp"
-                    android:layout_height="72dp"
-                    android:layout_marginTop="88dp"
-                    android:layout_marginEnd="50dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/add_photo" />
-
                 <TextView
                     android:id="@+id/textView_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="64dp"
+                    android:layout_marginTop="150dp"
                     android:text="1"
                     app:layout_constraintBottom_toTopOf="@+id/textView_year"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/imageView2"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
@@ -86,7 +111,9 @@
                     android:text="@string/action_text"
                     app:layout_constraintStart_toStartOf="@+id/textView_year"
                     app:layout_constraintTop_toBottomOf="@+id/textView_year" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
     </LinearLayout>
 
