--- a/app/src/main/res/layout/card_view_content.xml
+++ b/app/src/main/res/layout/card_view_content.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/deneme_cardView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
@@ -13,15 +15,14 @@
         android:gravity="center"
         android:textColor="#100F0F"
         android:textSize="30sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/add_photo"
-        android:clickable="true" />
+        android:clickable="true"
+        android:scaleType="centerCrop" />
 
 
 </LinearLayout>
