--- a/app/src/main/res/layout/dialog_new_movie.xml
+++ b/app/src/main/res/layout/dialog_new_movie.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linear_layout_add"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/main_out_color"
@@ -20,6 +22,7 @@
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint_add"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -158,7 +161,7 @@
                     app:layout_constraintStart_toEndOf="@+id/edit_year"
                     app:layout_constraintTop_toTopOf="@+id/edit_title"
                     app:layout_constraintVertical_bias="0.55"
-                    app:srcCompat="@drawable/add_photo" />
+                    app:srcCompat="@drawable/add_photo_icon" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </LinearLayout>
