--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+
     <dimen name="card_corner_radius">17dp</dimen>
     <dimen name="card_margin">12dp</dimen>
     <dimen name="card_padding">10dp</dimen>
+    <dimen name="my_movie_list">20dp</dimen>
+
 </resources>
