--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="main_color">#FFD998E4</color>
+    <color name="main_color">#EBB0F4</color>
     <color name="main_out_color">#4F2C55</color>
 
 
