--- a/app/src/main/res/layout/card_view_content.xml
+++ b/app/src/main/res/layout/card_view_content.xml
@@ -22,7 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+
+        android:focusable="true"
+        />
 
 
 </LinearLayout>
