--- a/app/src/main/res/layout/slide_delete_movie.xml
+++ b/app/src/main/res/layout/slide_delete_movie.xml
@@ -19,7 +19,7 @@
         android:id="@+id/linear_layout_delete"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_out_color"
+        android:background="@color/white"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -39,10 +39,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="196dp"
+                    android:gravity="center"
                     android:hint="@string/delete_text"
                     android:textColor="@color/main_out_color"
                     android:textSize="30sp"
-                    android:gravity="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
