--- a/app/src/main/res/layout/card_view_content.xml
+++ b/app/src/main/res/layout/card_view_content.xml
@@ -6,24 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:textColor="#100F0F"
-        android:textSize="30sp"
-        android:textStyle="bold" />
-
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:src="@drawable/inception"
         android:scaleType="centerCrop"
-
         android:focusable="true"
         />
 
