--- a/app/src/main/res/layout/show_movie.xml
+++ b/app/src/main/res/layout/show_movie.xml
@@ -2,16 +2,12 @@
 
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayoutMenu6"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   >
 
     <LinearLayout
         android:id="@+id/linear_layout"
@@ -19,7 +15,7 @@
         android:layout_height="match_parent"
         android:background="@color/main_out_color"
         android:orientation="vertical"
-        android:padding="32dp">
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,154 +28,159 @@
                 android:layout_height="match_parent">
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cardView"
-                    android:layout_width="291dp"
-                    android:layout_height="180dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/card_margin"
-                    android:layout_marginTop="80dp"
+                    android:layout_marginBottom="60dp"
                     app:cardBackgroundColor="#FFFFFF"
                     app:cardCornerRadius="@dimen/card_corner_radius"
                     app:cardElevation="2dp"
+                    app:layout_constraintBottom_toTopOf="@+id/button_edit"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/textView_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="70dp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView_year"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView"
-                    app:layout_constraintVertical_bias="0.0"
-                    android:layout_marginLeft="56dp" />
+                    <include layout="@layout/card_view_content" />
 
-                <TextView
-                    android:id="@+id/textView_year"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_title"
-                    android:layout_marginLeft="56dp" />
-
-                <TextView
-                    android:id="@+id/textView_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_year"
-                    android:layout_marginLeft="56dp" />
-
-                <TextView
-                    android:id="@+id/textView_action"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/action_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
-                    android:layout_marginLeft="56dp" />
-
-                <TextView
-                    android:id="@+id/textView_horror"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/horror_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
-                    android:layout_marginLeft="56dp" />
+                </androidx.cardview.widget.CardView>
 
 
-                <TextView
-                    android:id="@+id/textView_comedy"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/comedy_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
-                    android:layout_marginLeft="56dp" />
-
-                <TextView
-                    android:id="@+id/textView_drama"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/drama_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
-                    android:layout_marginLeft="56dp" />
-
-                <TextView
-                    android:id="@+id/textView_thriller"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/thriller_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
-                    android:layout_marginLeft="56dp" />
 
                 <TextView
                     android:id="@+id/textView_western"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="56dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="20dp"
                     android:text="@string/western_text"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
-                    android:layout_marginLeft="56dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
 
+                <TextView
+                    android:id="@+id/textView_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="484dp"
+                    android:layout_marginEnd="84dp"
+                    android:text="deneme"
+                    app:layout_constraintBottom_toBottomOf="@+id/img"
+                    app:layout_constraintEnd_toStartOf="@+id/button_edit"
+                    app:layout_constraintHorizontal_bias="0.983"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
+                <TextView
+                    android:id="@+id/textView_year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="16dp"
+                    android:text="deneme"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_title" />
+
+                <TextView
+                    android:id="@+id/textView_description"
+                    android:text="deneme"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="12dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_year" />
+
+                <TextView
+                    android:id="@+id/textView_action"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/action_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
+
+                <TextView
+                    android:id="@+id/textView_horror"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/horror_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
+
+                <TextView
+                    android:id="@+id/textView_comedy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/comedy_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
+
+                <TextView
+                    android:id="@+id/textView_drama"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/drama_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
+
+                <TextView
+                    android:id="@+id/textView_thriller"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/thriller_text"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
 
                 <Button
                     android:id="@+id/button_delete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+                    android:layout_width="96sp"
+                    android:layout_height="42dp"
+                    android:layout_marginBottom="100dp"
                     android:hint="@string/button_delete"
                     android:textAlignment="gravity"
                     android:textColorHint="#CE0FEF"
-                    android:textSize="21sp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/button_edit"
-                    app:layout_constraintHorizontal_bias="0.437"
-                    app:layout_constraintStart_toStartOf="@+id/button_edit"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_action"
-                    app:layout_constraintVertical_bias="0.791" />
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/button_edit" />
 
                 <Button
+
                     android:id="@+id/button_edit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="80dp"
-                    android:layout_marginBottom="50dp"
+                    android:layout_width="96dp"
+                    android:layout_height="42dp"
+                    android:layout_marginBottom="24dp"
                     android:hint="@string/button_edit"
+                    android:onClick="loadUpdateMovie"
                     android:textAlignment="gravity"
                     android:textColorHint="#CE0FEF"
-                    android:textSize="21sp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/button_delete"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.528"
+                    app:layout_constraintHorizontal_bias="0.662"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description"
-                    app:layout_constraintVertical_bias="0.392" />
+                    app:layout_constraintTop_toBottomOf="@+id/img"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <ImageView
+                    android:id="@+id/img"
+                    android:layout_width="260dp"
+                    android:layout_height="289dp"
+                    tools:layout_editor_absoluteX="60dp"
+                    tools:layout_editor_absoluteY="138dp"
+                    tools:srcCompat="@tools:sample/avatars" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -187,6 +188,5 @@
     </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
