--- a/app/src/main/res/layout/show_movie.xml
+++ b/app/src/main/res/layout/show_movie.xml
@@ -13,7 +13,7 @@
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_out_color"
+        android:background="@color/white"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -27,124 +27,108 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/card_margin"
-                    android:layout_marginBottom="60dp"
-                    app:cardBackgroundColor="#FFFFFF"
-                    app:cardCornerRadius="@dimen/card_corner_radius"
-                    app:cardElevation="2dp"
-                    app:layout_constraintBottom_toTopOf="@+id/button_edit"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <include layout="@layout/card_view_content" />
-
-                </androidx.cardview.widget.CardView>
-
-
-
-                <TextView
-                    android:id="@+id/textView_western"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/western_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
 
                 <TextView
                     android:id="@+id/textView_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="484dp"
-                    android:layout_marginEnd="84dp"
-                    android:text="deneme"
-                    app:layout_constraintBottom_toBottomOf="@+id/img"
-                    app:layout_constraintEnd_toStartOf="@+id/button_edit"
-                    app:layout_constraintHorizontal_bias="0.983"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="132dp"
+                    android:layout_marginEnd="112dp"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/textView_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="16dp"
-                    android:text="deneme"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="@+id/textView_title"
                     app:layout_constraintTop_toBottomOf="@+id/textView_title" />
 
                 <TextView
                     android:id="@+id/textView_description"
-                    android:text="deneme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="12dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/textView_year"
                     app:layout_constraintTop_toBottomOf="@+id/textView_year" />
 
                 <TextView
                     android:id="@+id/textView_action"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
                     android:text="@string/action_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
-
-                <TextView
-                    android:id="@+id/textView_horror"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/horror_text"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                     app:layout_constraintTop_toBottomOf="@+id/textView_description" />
 
                 <TextView
                     android:id="@+id/textView_comedy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
                     android:text="@string/comedy_text"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                     app:layout_constraintTop_toBottomOf="@+id/textView_description" />
 
                 <TextView
-                    android:id="@+id/textView_drama"
+                    android:id="@+id/textView_horror"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/drama_text"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
+                    android:text="@string/horror_text"
+                    app:layout_constraintStart_toStartOf="@+id/textView_description"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
+
+                <TextView
+                    android:id="@+id/textView_western"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
+                    android:text="@string/western_text"
+                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                     app:layout_constraintTop_toBottomOf="@+id/textView_description" />
 
                 <TextView
                     android:id="@+id/textView_thriller"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
                     android:text="@string/thriller_text"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/textView_description"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_description" />
+
+                <TextView
+                    android:id="@+id/textView_drama"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
+                    android:text="@string/drama_text"
+                    app:layout_constraintStart_toStartOf="@+id/textView_description"
                     app:layout_constraintTop_toBottomOf="@+id/textView_description" />
 
                 <Button
                     android:id="@+id/button_delete"
                     android:layout_width="96sp"
                     android:layout_height="42dp"
-                    android:layout_marginBottom="100dp"
+                    android:layout_marginBottom="176dp"
                     android:hint="@string/button_delete"
                     android:textAlignment="gravity"
                     android:textColorHint="#CE0FEF"
@@ -162,25 +146,74 @@
                     android:layout_height="42dp"
                     android:layout_marginBottom="24dp"
                     android:hint="@string/button_edit"
-                    android:onClick="loadUpdateMovie"
                     android:textAlignment="gravity"
                     android:textColorHint="#CE0FEF"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button_delete"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.662"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/img"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView_comedy"
+                    app:layout_constraintVertical_bias="0.906" />
 
-                <ImageView
-                    android:id="@+id/img"
-                    android:layout_width="260dp"
-                    android:layout_height="289dp"
-                    tools:layout_editor_absoluteX="60dp"
-                    tools:layout_editor_absoluteY="138dp"
-                    tools:srcCompat="@tools:sample/avatars" />
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="112dp"
+                    android:layout_marginTop="132dp"
+                    android:text="@string/detail_title"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/textView_title"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="152dp"
+                    android:text="@string/detail_category"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/button_edit"
+                    app:layout_constraintEnd_toEndOf="@+id/textView3"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:text="@string/detail_description"
+                    app:layout_constraintEnd_toEndOf="@+id/textView2"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:text="@string/detail_year"
+                    app:layout_constraintEnd_toEndOf="@+id/textView"
+                    app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+                <TextView
+                    android:id="@+id/deletedanim"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Movie is deleted"
+                    tools:layout_editor_absoluteX="169dp"
+                    tools:layout_editor_absoluteY="572dp" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
